--- a/src/App.css
+++ b/src/App.css
@@ -14,4 +14,6 @@ a {
 .MuiContainer-root {
   padding-left: 0 !important;
   padding-right: 0 !important;
+  display: flex !important;
+  flex-direction: column !important;
 }
