--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,14 @@
 * {
   margin: 0;
   padding: 0;
-  /* box-sizing: border-box; */
+  box-sizing: border-box;
   scroll-behavior: smooth;
+}
+html,
+body,
+#root {
+  background-color: #14161a;
+  height: 100%;
 }
 
 a {
